--- a/views/Home/landingpg.ejs
+++ b/views/Home/landingpg.ejs
@@ -31,11 +31,11 @@
     <div class="txt">
 
         <div class="download_app_btn download_app_btn_left">
-            <a href="/" target="_self">I'm Patient</a>
+            <a href="/home" target="_self">I'm Patient</a>
         </div>
         
         <div class="download_app_btn download_app_btn_right doc_btn_brd">
-            <a href="/" target="_self">I'm Doctor</a>
+            <a href="/home" target="_self">I'm Doctor</a>
         </div>
         
     </div>
